--- a/configurations/package.json
+++ b/configurations/package.json
@@ -31,6 +31,7 @@
     "ts-node": "^10.6.0",
     "typechain": "^5.2.0",
     "typescript": "^4.6.2",
-    "yaml": "^2.1.1"
+    "yaml": "^2.1.1",
+    "@openzeppelin/contracts": "^4.7.0"
   }
 }
