--- a/setting.yml
+++ b/setting.yml
@@ -1,2 +1,10 @@
 path:
-  database: "/Users/shayyang/Desktop/BlockChain/Exploit/poc-database"
+  database: "/Users/yangyuannan/Sandbox/poc_database"
+
+# The url and blockNumber of archive node
+networks:
+  bsc:
+    url: "https://spring-empty-field.bsc.discover.quiknode.pro/a3c42e4b25fe985fe3654add8b5bb8c18dde2c43/"
+    blockNumber: '0'
+  eth:
+    url: "https://wandering-proud-bush.discover.quiknode.pro/17bf7e4b0bdbf9d31aa1495bb66b1430aacde04d/"
