--- a/configurations/package.json
+++ b/configurations/package.json
@@ -32,6 +32,7 @@
     "typechain": "^5.2.0",
     "typescript": "^4.6.2",
     "yaml": "^2.1.1",
-    "@openzeppelin/contracts": "^4.7.0"
+    "@openzeppelin/contracts": "^4.7.0",
+    "abi-to-sol": "0.6.4"
   }
 }
