--- a/configurations/package.json
+++ b/configurations/package.json
@@ -33,6 +33,7 @@
     "typescript": "^4.6.2",
     "yaml": "^2.1.1",
     "@openzeppelin/contracts": "^4.7.0",
-    "abi-to-sol": "0.6.4"
+    "abi-to-sol": "0.6.4",
+    "@poanet/solidity-flattener": "3.0.7"
   }
 }
