--- a/config.yml
+++ b/config.yml
@@ -1,10 +1,19 @@
-abi: ./abis/wbnb.json
-blockNumber: 19924359
-contractAddress: '0x053aa23c88f4ffe10b81595b7848264e89bde997'
+abi: ./abis/0xbb4.json
+apiKey: XXXXXXXX
+apiURL: https://api.bscscan.com
+blockNumber: '19927225'
+contractAddress: '0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c'
 function: totalSupply()
 networks:
   bsc:
-    url: https://nd-615-585-235.p2pify.com/b4998084582e65fec3eb93545a6a8deb
+    url: https://nd-615-585-235.p2pify.com/XXXXXXX
   eth:
     url: https://wandering-proud-bush.discover.quiknode.pro/xxx/
-url: https://nd-615-585-235.p2pify.com/b4998084582e65fec3eb93545a6a8deb
+scanAPI:
+  bsc:
+    key: XXXXX
+    url: https://api.bscscan.com
+  eth:
+    key: XXXXXXXX
+    url: https://api.etherscan.io
+url: https://nd-615-585-235.p2pify.com/XXXX
